[gd_scene load_steps=8 format=3 uid="uid://b748b2h5q8iwy"]

[ext_resource type="Script" path="res://scripts/CustomerController.gd" id="1_1tc1k"]
[ext_resource type="Theme" uid="uid://c87g1wfiyj8qq" path="res://tres/order_bubble.tres" id="2_n6kwl"]
[ext_resource type="Texture2D" uid="uid://cyam6m8m1j8k0" path="res://assets/gui/scorecard.png" id="3_rhlq5"]
[ext_resource type="AudioStream" uid="uid://bhifjlimuxupj" path="res://assets/audio/page-flip-47177.mp3" id="4_oyx08"]

[sub_resource type="Animation" id="Animation_g8pro"]
resource_name = "showScore"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Scorecard:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 600), Vector2(0, -100), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Scorecard:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, -0.174533, 0.174533, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Scorecard:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_oyx08")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_ild5d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Scorecard:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 600)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Scorecard:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Scorecard:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4u620"]
_data = {
"RESET": SubResource("Animation_ild5d"),
"showScore": SubResource("Animation_g8pro")
}

[node name="CustomerController" type="Node2D"]
script = ExtResource("1_1tc1k")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="remaining" type="Label" parent="."]
offset_left = -180.0
offset_top = -225.0
offset_right = -49.0
offset_bottom = -169.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("2_n6kwl")
theme_override_font_sizes/font_size = 41
text = "Score: "

[node name="Scorecard" type="Sprite2D" parent="."]
position = Vector2(0, 600)
texture = ExtResource("3_rhlq5")

[node name="VBoxContainer2" type="VBoxContainer" parent="Scorecard"]
offset_left = -236.0
offset_top = -215.0
offset_right = 228.0
offset_bottom = 187.0

[node name="VBoxContainer" type="VBoxContainer" parent="Scorecard/VBoxContainer2"]
layout_mode = 2

[node name="minpoints" type="Label" parent="Scorecard/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_n6kwl")
theme_override_font_sizes/font_size = 51
text = "Required Points: "

[node name="score" type="Label" parent="Scorecard/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_n6kwl")
theme_override_font_sizes/font_size = 51
text = "Score: "

[node name="incorrect" type="Label" parent="Scorecard/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_n6kwl")
theme_override_font_sizes/font_size = 51
text = "Incorrect: "

[node name="correct" type="Label" parent="Scorecard/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_n6kwl")
theme_override_font_sizes/font_size = 51
text = "Correct: "

[node name="poisons" type="Label" parent="Scorecard/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_n6kwl")
theme_override_font_sizes/font_size = 51
text = "Poisons: "

[node name="HBoxContainer" type="HBoxContainer" parent="Scorecard/VBoxContainer2"]
layout_mode = 2

[node name="menu" type="Button" parent="Scorecard/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_n6kwl")
theme_override_font_sizes/font_size = 36
text = "Menu"

[node name="restart" type="Button" parent="Scorecard/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_n6kwl")
theme_override_font_sizes/font_size = 36
text = "Restart
"

[node name="next" type="Button" parent="Scorecard/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_n6kwl")
theme_override_font_sizes/font_size = 36
text = "Next Level"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4u620")
}

[connection signal="pressed" from="Scorecard/VBoxContainer2/HBoxContainer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Scorecard/VBoxContainer2/HBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Scorecard/VBoxContainer2/HBoxContainer/next" to="." method="_on_next_pressed"]
